--- a/index.html
+++ b/index.html
@@ -5,68 +5,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Landing Page</title>
+    <title>I Love Music</title>
 </head>
 
 <body>
     <div class="header">
-        <div class="header-logo">Header Logo</div>
+        <div class="header-logo"><a href="https://youtu.be/E4WlUXrJgy4?si=7lfeXq0u11jRj_kZ">Don't click here</a></div>
         <ul class="links">
-            <li><a href="">header link one</a></li>
-            <li><a href="">header link two</a></li>
+            <li><a href="https://open.spotify.com/playlist/2WaMo09d7BHXQPhBflZWDq?si=e6de280eb6f54ca7">My Playlist</a></li>
+            <li><a href="https://open.spotify.com/playlist/4uNffc8PqyphseGjVpwIpp?si=9882e33a1eda441f">Another Playlist :)</a></li>
         </ul>
     </div>
-    <div class="dark-bg-color">
+    <div class="hero-section">
         <div class="text-body">
-            <div class="hero-main-text"> This website is awesome </div>
-            <div class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a
-                smaller font and the color is lower contrast.</div>
-            <button class="sign-up">Sign up</button>
+            <div class="hero-main-text"> Music is love </div>
+            <div class="hero-secondary-text">Welcome to my little music world — a place to share the bands I love and
+                the songs that stay with me.
+                It’s a mix of sounds that inspire, comfort, and make life more fun.</div>
+            <button class="spotify-button"><a href="https://open.spotify.com/user/31xw72562ozew7tmzr3nqcuutxe4?si=d6dac84fed9746fa">My Spotify</a></button>
         </div>
         <div class="img-wrap">
             <img class="img-one"
-                src="https://images.unsplash.com/photo-1464618663641-bbdd760ae84a?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8c29mdCUyMGJhY2tncm91bmR8ZW58MHx8MHx8fDA%3D">
+                src="./images/imgone.png">
         </div>
     </div>
-    <div class="white-bg">
-        <div class="information">Some Random Information.</div>
+    <div class="bands-info-section">
+        <div class="bands-section-title">My Favourite Bands</div>
         <div class="images">
             <div class="info">
-                <img class="img-two" src="./images/barberry.png" alt="barberry">
-                <div class="text">This is a type of plant. We love this one.</div>
+                <img class="imgs" src="./images/radiohead.png" alt="Radiohead">
+                <div class="band-description">Masters of melancholy and innovation, redefining alternative rock with every album.
+                </div>
             </div>
             <div class="info">
-                <img class="img-two" src="./images/chilli.png" alt="chili">
-                <div class="text">This is another type of plant. Isn't it nice?</div>
+                <img class="imgs" src="./images/bcnr.png" alt="bcnr">
+                <div class="band-description">Unpredictable and poetic, BCNR turns raw emotion into artful chaos.</div>
             </div>
             <div class="info">
-                <img class="img-two" src="./images/pepper.png" alt="pepper">
-                <div class="text">We have so many plants. Yay plants.</div>
+                <img class="imgs" src="./images/thestrokes.png" alt="the strokes">
+                <div class="band-description">Garage rock revivalists with effortless cool and razor-sharp riffs.</div>
             </div>
             <div class="info">
-                <img class="img-two" src="./images/saffron.png" alt="saffron">
-                <div class="text">I'm running out of things to say about plants.</div>
+                <img class="imgs" src="./images/pinkfloyd.png" alt="pink floyd">
+                <div class="band-description">Pioneers of psychedelic soundscapes and concept albums that bend the mind.</div>
             </div>
         </div>
     </div>
-    <div class="grey-bg">
+    <div class="quote-section">
         <div class="quote">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
-            people will actually read it. Who knows? All I know is that it looks nice.
+            <div>Oh but every time I try to make lunch</div>
+            <div>For anyone else in my head</div>
+            <div>I end up dreaming of you</div>
+            <div>And you come to me... Good morning</div>
+            <div>Show me the place where he inserted the blade</div>
         </div>
-        <div class="author">-Thor, God of Thunder</div>
+        <div class="author">-Black Country, New Road</div>
     </div>
-    <div class="white-bg-2">
-        <div class="blue-bg">
-            <div class="text">
-            <div class="prim-text">Call to action! It's time!</div>
-            <div class="sec-text">Sign up for our product by clicking that button right over there!</div>
+    <div class="cta-section">
+        <div class="cta-box">
+            <div class="cta-text-container">
+                <div class="prim-text">Leave a song recommendation for me</div>
+                <div class="sec-text">Share music that you think matches my taste or anything you like.</div>
             </div>
-            <button class="sign-up-2">Sign up</button>
+            <button class="tunebox-button"><a href="https://musictaste.space/@frenchfries">Tunebox</a></button>
         </div>
     </div>
     <div class="footer">
-        <div> Copyright © The Odin Project 2021</div>
+        <div> Copyright © frenzywho </div>
     </div>
 </body>
 
